// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page renders current styling if provided 1`] = `
<li
  className="Page-jouGdw c-pagination__page is-current fyxZdj"
  data-garden-id="pagination.page"
  data-garden-version="version"
/>
`;

exports[`Page renders default styling 1`] = `
<li
  className="Page-jouGdw c-pagination__page fyxZdj"
  data-garden-id="pagination.page"
  data-garden-version="version"
/>
`;

exports[`Page renders focused styling if provided 1`] = `
<li
  className="Page-jouGdw c-pagination__page is-focused fyxZdj"
  data-garden-id="pagination.page"
  data-garden-version="version"
/>
`;

exports[`Page renders hidden styling if provided 1`] = `
<li
  className="Page-jouGdw c-pagination__page is-hidden fyxZdj"
  data-garden-id="pagination.page"
  data-garden-version="version"
  hidden={true}
/>
`;

exports[`Page renders hovered styling if provided 1`] = `
<li
  className="Page-jouGdw c-pagination__page is-hovered fyxZdj"
  data-garden-id="pagination.page"
  data-garden-version="version"
/>
`;
